[project]
name = "currencies"
version = "0.1.0"
description = ""
authors = [
    {name = "uollouu",email = "131377153+uollouu@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
